--- a/stock-project/Gemfile
+++ b/stock-project/Gemfile
@@ -30,6 +30,7 @@ gem 'date_plus'
 
 # Use Unicorn as the app server
 # gem 'unicorn'
+gem 'oauth'
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
