--- a/stock-project/Gemfile
+++ b/stock-project/Gemfile
@@ -28,6 +28,14 @@ gem 'bcrypt', '~> 3.1.7'
 
 gem 'date_plus'
 
+gem 'rubygems'
+
+gem 'oauth'
+
+gem 'json'
+
+gem 'yahoo-finance', require: 'yahoo_finance'
+
 # Use Unicorn as the app server
 # gem 'unicorn'
 
@@ -45,5 +53,6 @@ group :development, :test do
   gem 'spring'
 
   gem 'pry-rails'
-end
 
+  gem 'awesome_print'
+end
