--- a/stock-project/Gemfile
+++ b/stock-project/Gemfile
@@ -1,4 +1,5 @@
 source 'https://rubygems.org'
+ruby "2.2.0"
 
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
@@ -34,6 +35,10 @@ gem 'oauth'
 gem 'json'
 
 gem 'yahoo-finance', require: 'yahoo_finance'
+
+#For Heroku
+gem 'rails_12factor', group: :production
+
 
 # Use Unicorn as the app server
 # gem 'unicorn'
